examples/test/testpolicy16917.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16917
  namespace: namespace130
spec:
  podSelector:
    matchLabels:
      key35: value25
      key31: value43
      key34: value47
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key2: value25
          key40: value40
          key47: value36
